# gitAST

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/gitast/: __init__.py  analysis.py  analyze.py  cli.py  config.py  core.py  deps.py  embed.py  hooks.py  llm.py  models.py  report.py  utils.py
tests/: test_analysis.py  test_analyze.py  test_cli.py  test_config.py  test_core.py  test_deps.py  test_embed.py  test_llm.py  test_models.py  test_report.py  test_utils.py
